package com.oneupproject.cupiggy.game

/**
 * BasicManager
 *
 * 子クラスはすべてシングルトンによる実装を行います。
 *
 * @author y728n
 * @since 1.0.0
 */

abstract class BasicManager : GameObject